<resources>
    <!--GENERAL APP STRINGS-->
    <string name="app_name">Dishi</string>
    <string name="action_settings">Settings</string>

    <!--KEYS-->
    <!--Parse-->
    <string name="parse_app_id">WxujS9RrPupa3pwCrM3CuV3N2wVFGQqKK11JxFSD</string>
    <string name="parse_client_key">71ztokocp0R578T2NmmfjlGDlLkMvT6KQqb9Xvhi</string>


    <!--CHOICE OF USER-->
    <string name="eater_access_button">eat</string>
    <string name="chef_access_button">make food</string>

    <!--USER ACCOUNT STRINGS-->
    <string name="title_activity_new_meal">NewMeal</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_chefs">Chefs</string>
    <string name="title_activity_recommended_layout">Recommended</string>

    <!--User Guillotine Strings-->
    <string name="user_guillotine_home">Home</string>
    <string name="user_guillotine_profile">Profile</string>
    <string name="user_guillotine_settings">Settings</string>


    <!--Recommended Login page-->
    <string name="LoginText">Login or Register as a Dishi Eater</string>
    <string name="Username"> Email or Username</string>
    <string name="Password">Password</string>
    <string name="LoginButton">Log In</string>
    <string name="Sign_up_text">Sign up with:</string>
    <string name="FacebookButton">Facebook</string>
    <string name="TwitterButton">Twitter</string>
    <string name="GoogleButton">Google</string>


    <!--Rating Strings-->
    <string-array name="ratings_array">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>


    <!--CHEF'S SIDE OF THINGS-->
    <string name="title_activity_chef_login">Chef Login</string>
    <string name="chef_sign_in_text">Dishi Chef, gain access</string>
    <string name="chef_register_text">Register as a Dishi Chef</string>
    <string name="chef_register_button">register</string>
    <string name="app_name_caps">DISHI</string>
    <string name="login">Log In</string>
    <string name="login_signup">log-in/sign-up</string>
    <string name="register">Register</string>
    <string name="profile_title">Profile</string>
    <string name="follow_chef_button">Follow</string>
    <string name="food_description_short">Succulent grilled beef steak with a side of your choice</string>
    <string name="chef_name">Tracy Cool</string>
    <string name="favourite_food">Ugali and Sukuma wiki</string>
    <string name="chef_specialty">Anything in a stew</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="chef_login_button">Log In</string>
    <string name="menu_activity_title">Menu</string>


    <!--spinner for the food types-->
    <string name="food_type_prompt">Choose meal type</string>

    <string name="rating_prompt">Rate this meal</string>


    <string-array name="meal_types_arrays">
        <item>Appetizer</item>
        <item>Dessert</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Drinks</item>
        <item>Vegetarian</item>
    </string-array>

    <!--Checkout -->
    <string-array name="payment_methods">
        <item>M-Pesa</item>
        <item>Cash on Delivery</item>
    </string-array>

    <string name="checkout_title">CHECKOUT</string>
    <string name="checkout_total">Total(KSH):</string>
    <string name="choose_payment_method">Choose Payment Method:</string>


</resources>
